--- a/gb/20/12/8/n12604307.md
+++ b/gb/20/12/8/n12604307.md
@@ -1,27 +1,41 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fjdhch354/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjdhch354/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjdhch354/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjdhch354/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【直播】川普疫苗峰会讲话 签行政令</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1287459258-600x400.jpg" />
-<h6>2020年11月24日，川普在白宫就美国股市道琼工业指数首度冲破3万点对媒体发表评论。(Chip Somodevilla/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【重播】大批疫苗分发在即 川普签行政令</h2>
+<a href="https://dol9bue5bysdj.cloudfront.net/Q8nkwfTVt"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6>12月8日，川普总统在疫苗峰会上发表讲话，并签署行政令。(Tasos Katopodis/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年12月08日讯】美东时间周二下午2:00，<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）总统在 “极速行动”疫苗峰会上发表讲话。新唐人、大纪元联合对此进行直播（中文同声翻译），敬请收看。</p>
-<p><ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统周二将在<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E7%99%BD%E5%AE%AB.md#1">白宫</a>举行的“极速行动疫苗峰会”上发表讲话，届时两家美国制药公司和联邦政府准备在染疫人数激增的同时，开始分发第一批冠状病毒（<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>）疫苗。</p>
-<p>综合媒体报导，<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E7%99%BD%E5%AE%AB.md#1">白宫</a>峰会将聚集州长、私营部门高管、药品分销商以及来自公司的代表，一旦获得美国食品药物管理局（FDA）的批准，这些公司将有助于分配和管理疫苗。</p>
-<p>不过，这次活动辉瑞和Moderna的高管缺席，他们正在寻求FDA对其各自疫苗的紧急使用授权。</p>
-<p>这两个等待FDA紧急使用授权（EUA）的疫苗，辉瑞与 BioNTech研发的疫苗，FDA 周四（12月10日）审核，最快本周通过紧急使用授权 ； 另一个Moderna生产的疫苗，FDA将在12月17日审核。</p>
-<h2>川普将签署行政命令</h2>
-<p>在这个“疫苗峰会”上，川普还将签署行政命令，确保美国人民优先获得疫苗，接下来才会满足援助他国疫苗方面的需求。</p>
-<p>据官员透露，这道命令符合川普一贯的“美国优先”外交立场，将建立一套架构，确保美国满足美国民众的接种需求，之后再援助他国接种疫苗。</p>
+	<p>【大纪元2020年12月08日讯】美东时间周二下午2:00，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）总统在“极速行动”疫苗峰会上发表讲话。新唐人、大纪元联合对此进行直播（中文同声翻译），敬请收看。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" allow="autoplay" scrolling="no" seamless src="https://player.captivate.fm/episode/59016e29-6f7c-439d-ad8d-ad55f849c637"></a></div>
+<p><center><a src=""></a><a href="https://dol9bue5bysdj.cloudfront.net/Q8nkwfTVt"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/DIw8VjAL7iU" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统周二在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%99%BD%E5%AE%AB.md#1">白宫</a>举行的“极速行动疫苗峰会”上发表讲话。两家美国制药公司和联邦政府准备开始分发第一批冠状病毒<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>）疫苗。</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%99%BD%E5%AE%AB.md#1">白宫</a>峰会聚集了州长、行业高管、科学家、医生、药品分销商以及来自公司的代表，一旦获得美国食品药物管理局（FDA）的批准，这些公司将有助于分配和管理疫苗。</p>
+<p>FDA今天（8日）表示，辉瑞与BioNTech SE的疫苗试验数据符合该机构规定的“成功标准”，表明将在美国很快推出。英国已经批准了辉瑞疫苗，并从周二早上开始分发接种疫苗。</p>
+<p>川普说，开发疫苗是“一项巨大的国家成就”，并指出大多数疫苗的开发需要五年或更长时间，而我们“距离FDA授权只有几天时间，而且正在大力推动它们，到时我们将立即开始批量分发。”这是“现代医学史上最伟大的奇迹之一”。</p>
+<p>白宫在情况说明书中说，这些疫苗将在FDA紧急批准后的48小时内发货。</p>
+<p>川普说：“每个想要该疫苗的美国人都将能够获得该疫苗。”他乐观地表示，疫苗“将结束大流行。”</p>
+<p>川普还说，将与各州政府合作，最终决定权由各州来决定，但他鼓励各州优先考虑老年人和有潜在疾病的患者，以及医护人员和急救人员。</p>
+<p>这次活动辉瑞和Moderna的高管缺席，他们正在寻求FDA对其各自疫苗的紧急使用授权（EUA）。</p>
+<p>辉瑞与BioNTech研发的疫苗，FDA周四（12月10日）审核，最快本周通过紧急使用授权；另一个Moderna生产的疫苗，FDA将在12月17日审核。</p>
+<h2>川普签署行政命令</h2>
+<p>在这个“疫苗峰会”上，川普还签署了行政命令，确保美国人民优先获得疫苗，接下来才会满足援助他国疫苗方面的需求。</p>
+<p>福克斯说，这道命令符合川普一贯的“美国优先”外交立场，将建立一套架构，确保美国满足美国民众的接种需求，之后再援助他国接种疫苗。</p>
+<p>该命令指示卫生与公众服务部部长将以“前所未有”的速度优先向美国人分发疫苗。</p>
+<h2>谁是下一届政府？</h2>
+<p>有记者问，下一届政府最终将实现疫苗的大部分分发，为什么不让拜登过渡团队成员参加？川普连问，下一届政府是谁？他说，无论谁是下届政府，将真正受益于这项令人难以置信的科学成就。</p>
+<p>川普说，希望下一届政府将是川普政府，因为你无法窃取成千上万的选票，你不能采取欺诈和欺骗手段，然后再略微赢得摇摆州。看看所有的腐败，你不能赢得那样的选举。</p>
+<p>现在，川普说，让我们看看是否有人有胆量，无论是立法者还是立法机购，或者是一个最高法院的法官还是一些法官。让我们看看他们是否有勇气做这个国家每人都知道的，什么是正确的事情。</p>
+<figure id="attachment_12604797" aria-describedby="caption-attachment-12604797" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230016839.jpg"><img class="size-large wp-image-12604797" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230016839-600x385.jpg" alt="" width="600" b="385" /></a><figcaption id="caption-attachment-12604797" class="wp-caption-text">12月8日，川普总统在疫苗峰会上发表讲话，并签署行政令。(SAUL LOEB/AFP via Getty Images)</figcaption></figure>
+<h2>川普政府“极速行动”分发</h2>
 <p>川普政府“极速行动”（Operation Warp Speed）最高主管施劳威（Moncef Slaoui）12月2日表示，明年2月底前，美国将能取得足够剂量的疫苗，目标是让疫苗接种数达到1亿人，约占美国成年人口的40%。</p>
 <p>他说，今年12月，两款疫苗的产量将达到2,000万剂，1月达3,000万剂，2月增至5,000万剂，使总数达到1亿剂。</p>
-<p>美国的<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%e4%b8%ad%e5%85%b1%e7%97%85%e6%af%92.md#1">中共病毒</a>（武汉肺炎）疫情仍然严峻，据CDC昨天（7日）报告，新增病例超过17.4万，达到3月疫情以来最高峰；死亡1118例，近日有所下降。过去7天每10万人有58.6例确诊。</p>
+<p>美国的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%e4%b8%ad%e5%85%b1%e7%97%85%e6%af%92.md#1">中共病毒</a>（武汉肺炎）疫情仍然严峻，据CDC昨天（7日）报告，新增病例超过17.4万，达到3月疫情以来最高峰；不过死亡1,118例，近日有所下降。过去7天每10万人有58.6例确诊。</p>
 <p>迄今全美累计确诊病例超过1495.8万，死亡超28.3万人，据约翰?霍普金斯大学数据，全球总确诊数超过6776.7万例，至少154.8万人死亡。</p>
 <p>今年5月，川普政府正式启动“极速行动”，资助药厂以最快速度研发COVID-19疫苗，并委由葛兰素史克（GSK）疫苗部门前主管施劳威主导计划。</p>
 <h2>网络收看方式：</h2>
-<p>大纪元新闻网：<ahref="https://github.com/fjdhch354/djy/blob/master/gb/nf1334917.md#1" target="_blank" rel="noopener noreferrer">https://github.com/fjdhch354/djy/blob/master/gb/nf1334917.md#1</a><br />
-大纪元YouTube直播：<ahref="https://www.youtube.com/c/djynews" target="_blank" rel="noopener noreferrer">https://www.youtube.com/c/djynews</a><br />
+<p>大纪元新闻网：<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/nf1334917.md#1" target="_blank" rel="noopener noreferrer">https://github.com/kobfyi3602/djy/blob/master/gb/nf1334917.md#1</a><br />
+大纪元YouTube直播：<ahref=""></a><a href="https://dol9bue5bysdj.cloudfront.net/Q8nkwfTVt"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/djynews" target="_blank" rel="noopener noreferrer">"></a><a href="https://dol9bue5bysdj.cloudfront.net/Q8nkwfTVt"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/djynews</a><br />
 大纪元脸书直播：<ahref="http://facebook.com/djy.news" target="_blank" rel="noopener noreferrer">facebook.com/djy.news</a></p>
 <p>【支持】为真相护航 为沉默发声，就在今天，支持大纪元<br />
 <ahref="https://donate.epochtimes.com/" target="_blank" rel="noopener noreferrer">https://donate.epochtimes.com</a></p>
@@ -29,45 +43,44 @@
 <p>责任编辑：孙芸?#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12601576.md#1">美疫苗无分发计划？卫生部长：拜登一派胡言</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12601904.md#1">毒疫苗受害家长发起实拍活动 寻找何方美</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602484.md#1">辉瑞疫苗即将投产 总理承诺公开接种</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602495.md#1">川普将签疫苗行政令 “优先考虑美国人”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/7/n12601576.md#1">美疫苗无分发计划？卫生部长：拜登一派胡言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/7/n12601904.md#1">毒疫苗受害家长发起实拍活动 寻找何方美</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/7/n12602484.md#1">辉瑞疫苗即将投产 总理承诺公开接种</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/12/7/n12602495.md#1">川普将签疫苗行政令 “优先考虑美国人”</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864143.md#1" target="_blank">毛泽东诗词中的抄袭现象</a></li><li><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/1/13/n4615407.md#1" target="_blank">怪病神奇痊愈的故事</a></li>
-<hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/3/n10112268.md#1" target="_blank">林辉：红色公主的大字报让军报少将家破人亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/1/n12588670.md#1">姜子牙之女做王后 历经千年贤名传</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/4/n12596113.md#1">【馨香雅句】开启中国服饰文化的竟是她</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12602741.md#1">【珍言真语】林建诚：有线台裁员 新闻自由不再</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12604326.md#1">【财商天下】美通过重磅法案 中概股集体被棒喝</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12602708.md#1">【远见快评】情报总监剑指中共 川普声东击西？</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599095.md#1">【大选更新12.6】白宫：全美存在统计异常</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599402.md#1">威州邮递员指证：邮局下令更改选票邮戳日期</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599572.md#1">鲍威尔转发翟东升视频：中共如何搞定拜登</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602498.md#1">孙俪成大陆考生人物素描题 美貌皆非网友笑翻</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600656.md#1">Sana曾与确诊者请夏接触 TWICE全员接受检疫</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599611.md#1">35岁徐佳莹幽默报喜：我刚刚生了一个孩子</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600579.md#1">TWICE于MAMA获两奖 唱新歌登热搜与收视冠军</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12602271.md#1">游戏环节并列两岸旗帜 韩综《RM》辱华？</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600354.md#1">神秘金属柱子如雨后春笋 英国小岛也出现了</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/3/n12594410.md#1">忧郁症有4大症状 怎样改善？治疗和饮食全图解</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600868.md#1">史上首次 美太空人采收在外太空种植的萝卜</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/6/n12599786.md#1">大雪节气养生早睡晚起 3招保养心血管、增免疫</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/12/7/n12600653.md#1">与妻子吵架想散心 义国男子竟走了450公里</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/8/n12604307.htm">【直播】川普疫苗峰会讲话 签行政令</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/8/n12604307.htm">【重播】大批疫苗分发在即 川普签行政令</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12604307.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjdhch354/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjdhch354/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/12/8/n12604307.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
